# slamko

./: .gitignore  CLAUDE.md  MASTER_PLAN.md  README.md
docs/: DECOUPLING.md  DOC_PROCESS.md  PLAN_BA_GLOBAL.md  PLAN_OKVIS_REFACTOR.md  PLAN_TUMVI_RECTIFY.md  PLAN_VPR_RELOC.md  SYSTEM.md
scripts/: bench_ate.sh  bench_neverlost.sh  check_doc_freshness.sh  check_neverlost.py  export_eigenplaces_onnx.py  plot_compare_4way.py  plot_neverlost.py  plot_slamko.py  rectify_tumvi.py
slamko_bench/: CLAUDE.md
slamko_core/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
slamko_core/docs/: ARCHITECTURE.md  STATUS.md
slamko_core/include/slamko_core/: custom_data.hpp  estimation_frame.hpp  factor.hpp  factor_graph_backend.hpp  feature_source.hpp  feature_tracker.hpp  features.hpp  global_smoother.hpp  health.hpp  image_view.hpp  imu_sample.hpp  local_smoother.hpp  matcher.hpp  node_key.hpp  p3p_solver.hpp  relocalizer.hpp  robust_kernel.hpp  se3.hpp  sensor_frontend.hpp  stereo_observation.hpp  submap.hpp  submap_io.hpp
slamko_core/test/: test_contracts.cpp  test_node_key.cpp  test_se3.cpp  test_submap_io.cpp
slamko_fusion/: CMakeLists.txt  README.md  package.xml
slamko_fusion/docs/: PLAN_P1_fusion.md  STATUS.md
slamko_fusion/include/slamko_fusion/: gtsam_global_smoother.hpp  gtsam_local_smoother.hpp  session_graph.hpp
slamko_fusion/src/: gtsam_global_smoother.cpp  gtsam_local_smoother.cpp  session_graph.cpp
slamko_fusion/test/: test_global_smoother.cpp  test_gtsam_smoother.cpp
slamko_fusion/tools/: offline_ba.cpp
slamko_loop/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
slamko_loop/docs/: PLAN_P2_loop.md  STATUS.md
slamko_loop/include/slamko_loop/: anchor_gate.hpp  bow.hpp  lightglue_matcher.hpp  never_lost_supervisor.hpp  pose_graph.hpp  submap_archive.hpp  supervisor_state.hpp  xfeat_relocalizer.hpp
slamko_loop/src/: anchor_gate.cpp  bow.cpp  lightglue_matcher.cpp  never_lost_supervisor.cpp  pose_graph.cpp  submap_archive.cpp  xfeat_relocalizer.cpp
slamko_loop/test/: test_bow.cpp  test_lightglue.cpp  test_pose_graph.cpp  test_relocalizer.cpp  test_stress.cpp  test_supervisor.cpp
slamko_mapping/: CLAUDE.md
slamko_msgs/: README.md
slamko_reloc/: CLAUDE.md
slamko_ros/: CLAUDE.md  README.md
slamko_semantic/: CLAUDE.md
slamko_sensors/: CLAUDE.md
slamko_vio/: CLAUDE.md  CMakeLists.txt  README.md  package.xml
slamko_vio/docs/: PLAN_P0_vio.md  STATUS.md
slamko_vio/include/slamko_vio/: ceres_local_smoother.hpp  imu_factor.hpp  imu_preintegration.hpp  imu_types.hpp  klt_tracker.hpp  local_ba.hpp  motion_ba_solver.hpp  p3p_solver.hpp  pnp_cuda.hpp  pose_estimator.hpp  shitomasi.hpp  stereo_matcher.hpp  triangulator.hpp  types.hpp  vio_config.hpp  vio_pipeline.hpp
slamko_vio/include/slamko_vio/feature/: eigenplaces.h  shitomasi_source.hpp  xfeat.h  xfeat_source.hpp
slamko_vio/launch/: vio_euroc.launch.py
slamko_vio/nodes/: vio_node.cpp
slamko_vio/src/: ceres_local_smoother.cpp  eigenplaces.cpp  imu_preintegration.cpp  klt_tracker.cu  local_ba.cpp  pnp_cuda.cu  pose_estimator.cpp  shitomasi.cu  stereo_matcher.cu  vio_pipeline.cpp  xfeat.cpp
slamko_vio/tests/: debug_p3p.cpp  test_ceres_local_smoother.cpp  test_imu_preintegration.cpp  test_klt_tracker.cpp  test_motion_ba.cpp  test_p3p.cpp  test_shitomasi.cpp  test_stereo_matcher.cpp
slamko_viz/: CLAUDE.md
