<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamko_fusion</name>
  <version>0.0.1</version>
  <description>slamko Tier-2 fusion: GtsamLocalSmoother — a GTSAM
    IncrementalFixedLagSmoother (iSAM2 + marginalization) over T_WB/vel/bias/landmark
    nodes fusing CombinedImuFactor + GenericStereoFactor. Implements
    slamko_core::LocalSmoother. Apache-2.0 (GTSAM is BSD-3).</description>

  <maintainer email="maikelborys@gmail.com">Maikel Borys</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <depend>slamko_core</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
