<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamko_loop</name>
  <version>0.0.1</version>
  <description>slamko Tier-3 global: the never-lost supervisor (state machine +
    archive-don't-discard seal/branch + decoupled relocalize/weld gate, owns map→odom)
    + loop-closure-as-factor (P2.5) + relocalization seam (P3). Depends on slamko_core
    contracts only (Hard Rule #2); gates recovery OUTSIDE the estimator graph. Apache-2.0.</description>

  <maintainer email="maikelborys@gmail.com">Maikel Borys</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <depend>slamko_core</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
