<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slamko_vio</name>
  <version>0.0.1</version>
  <description>slamko visual-inertial odometry (the fast S1): swappable feature
    front-end (Shi-Tomasi / XFeat / LiftFeat-m1) + KLT + stereo + PnP + IMU +
    dead-reckoning. Seeded by klt_vo (MH_01 EuRoC ATE 0.054 m @ ~240 fps). Apache-2.0.</description>

  <maintainer email="maikelborys@gmail.com">Maikel Borys</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>

  <depend>slamko_core</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
